Common: reviewed method for getting ACLs